<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".RegistrationFragment">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_small"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/userId"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/etName"
                    app:layout_constraintStart_toStartOf="@id/etName"
                    app:layout_constraintTop_toBottomOf="@id/etName" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassowrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/passowrd"
                    android:inputType="numberPassword"
                    android:maxLength="4"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/etName"
                    app:layout_constraintStart_toStartOf="@id/etName"
                    app:layout_constraintTop_toBottomOf="@id/etUserId" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/etName"
                    app:layout_constraintStart_toStartOf="@id/etName"
                    app:layout_constraintTop_toBottomOf="@id/etPassowrd" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmailId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:hint="@string/email_Id"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="@id/etName"
                    app:layout_constraintStart_toStartOf="@id/etName"
                    app:layout_constraintTop_toBottomOf="@id/etMobile" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSubmit"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/button_height"
                    android:layout_margin="@dimen/margin_large"
                    android:background="@color/dark_green"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etEmailId" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
