<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegistrationFragment">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUserId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassowrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/passowrd"
            android:inputType="numberPassword"
            android:maxLength="4"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@id/etUserId"
            app:layout_constraintStart_toStartOf="@id/etUserId"
            app:layout_constraintTop_toBottomOf="@id/etUserId" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_margin="@dimen/margin_large"
            android:background="@color/dark_green"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
